--- a/symlinks.conf
+++ b/symlinks.conf
@@ -1,1 +1,4 @@
+$(pwd)/zsh/.zshrc:$HOME/.zshrc
+$(pwd)/zsh/.zshenv:$HOME/.zshenv
+$(pwd)/zsh/git_aliases.zsh:$HOME/.config/zsh/git_aliases.zsh
 $(pwd)/nvim:$HOME/.config/nvim
