--- a/symlinks.conf
+++ b/symlinks.conf
@@ -1,4 +1,4 @@
-$(pwd)/zsh/.zshrc:$HOME/.zshrc
-$(pwd)/zsh/.zshenv:$HOME/.zshenv
-$(pwd)/zsh/git_aliases.zsh:$HOME/.config/zsh/git_aliases.zsh
-$(pwd)/nvim:$HOME/.config/nvim
+zsh/.zshrc:.zshrc
+zsh/.zshenv:.zshenv
+zsh/git_aliases.zsh:.config/zsh/git_aliases.zsh
+nvim:.config/nvim
