Add starship config & minor tweaks

--- a/symlinks.conf
+++ b/symlinks.conf
@@ -1,5 +1,7 @@
 zsh/.zshrc:.zshrc
 zsh/.zshenv:.zshenv
 zsh/git_aliases.zsh:.config/zsh/git_aliases.zsh
+zsh/more_customizations.zsh:.config/zsh/more_customizations.zsh
 nvim:.config/nvim
 wezterm:.config/wezterm
+starship:.config/starship
