--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -3,6 +3,7 @@ brew "starship"
 brew "neovim"
 
 # ZSH "plugins"
+brew "zsh-completions"
 brew "zsh-autosuggestions"
 brew "zsh-syntax-highlighting"
 
