Add karabiner config

--- a/symlinks.conf
+++ b/symlinks.conf
@@ -5,3 +5,4 @@ zsh/more_customizations.zsh:.config/zsh/more_customizations.zsh
 nvim:.config/nvim
 wezterm:.config/wezterm
 starship:.config/starship
+karabiner:.config/karabiner
